[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://UI/PauseMenu.gd" type="Script" id=2]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -453.0
margin_top = -409.0
margin_right = 1121.0
margin_bottom = 720.0
color = Color( 0.0980392, 0.0901961, 0.0862745, 0.882353 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 480.0
margin_bottom = 274.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 197.0
margin_top = 98.0
margin_right = 282.0
margin_bottom = 175.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 85.0
margin_bottom = 29.0
text = "Paused
"
align = 1
uppercase = true

[node name="Restart" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 33.0
margin_right = 85.0
margin_bottom = 53.0
text = "Restart"

[node name="MainMenu" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 85.0
margin_bottom = 77.0
text = "main menu"

[connection signal="button_down" from="CenterContainer/VBoxContainer/Restart" to="." method="_on_Restart_button_down"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/MainMenu" to="." method="_on_Button_button_down"]
